kubernetes/apps/security/keycloak/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - keycloak.getquestify.com
  rules:
    - backendRefs:
        - name: keycloak-keycloakx-http
          port: 80
